--- a/StoryBoardApp/app/src/main/res/values/strings.xml
+++ b/StoryBoardApp/app/src/main/res/values/strings.xml
@@ -37,6 +37,7 @@
         <item>Thriller</item>
         <item>Horror</item>
         <item>Educational</item>
+        <item>Challenge</item>
     </string-array>
 
 </resources>
